[gd_scene load_steps=5 format=3 uid="uid://btdousdmcb6d3"]

[ext_resource type="Script" path="res://main.gd" id="1_68se7"]
[ext_resource type="PackedScene" uid="uid://bkl5p2djoo52i" path="res://coin.tscn" id="3_43qkv"]
[ext_resource type="PackedScene" uid="uid://svl2gfhqrjtk" path="res://shop_item.tscn" id="3_d2o1n"]
[ext_resource type="Script" path="res://shop.gd" id="3_ie1li"]

[node name="Game" type="Node2D"]
script = ExtResource("1_68se7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="FlipButton" type="Button" parent="UI"]
texture_filter = 1
offset_left = 246.0
offset_top = 306.0
offset_right = 310.0
offset_bottom = 327.0
text = "Flip"

[node name="ResetButton" type="Button" parent="UI"]
texture_filter = 1
offset_left = 544.0
offset_top = 187.0
offset_right = 609.0
offset_bottom = 208.0
text = "Reset"

[node name="ContinueButton" type="Button" parent="UI"]
texture_filter = 1
offset_left = 543.0
offset_top = 162.0
offset_right = 609.0
offset_bottom = 183.0
text = "Continue"

[node name="LivesLabel" type="Label" parent="UI"]
texture_filter = 1
offset_left = 243.0
offset_top = 333.0
offset_right = 311.0
offset_bottom = 352.0
text = "Lives: 5"
horizontal_alignment = 1

[node name="FragmentsLabel" type="Label" parent="UI"]
texture_filter = 1
offset_left = 243.0
offset_top = 202.0
offset_right = 311.0
offset_bottom = 221.0
text = "Fragments: 0"

[node name="CoinValueLabel" type="Label" parent="UI"]
texture_filter = 1
offset_left = 527.0
offset_top = 319.0
offset_right = 624.0
offset_bottom = 335.0
text = "Total Coin Value: 0"

[node name="GoalLabel" type="Label" parent="UI"]
texture_filter = 1
offset_left = 527.0
offset_top = 335.0
offset_right = 628.0
offset_bottom = 351.0
text = "Goal Coin Value: 5"
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="UI"]
texture_filter = 1
offset_left = 532.0
offset_top = 87.0
offset_right = 616.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 32
text = "You win!"
horizontal_alignment = 1

[node name="RoundsLabel" type="Label" parent="UI"]
texture_filter = 1
offset_left = 539.0
offset_top = 140.0
offset_right = 615.0
offset_bottom = 159.0
text = "Rounds Left: 5"

[node name="Table" type="Node2D" parent="."]

[node name="CoinRow" type="HBoxContainer" parent="Table"]
offset_left = 42.0
offset_top = 226.0
offset_right = 515.0
offset_bottom = 301.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
alignment = 1

[node name="Coin" parent="Table/CoinRow" instance=ExtResource("3_43qkv")]
layout_mode = 2

[node name="Shop" type="HBoxContainer" parent="Table"]
offset_left = 37.0
offset_top = 35.0
offset_right = 510.0
offset_bottom = 183.0
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("3_ie1li")

[node name="ShopItem" parent="Table/Shop" instance=ExtResource("3_d2o1n")]
layout_mode = 2

[connection signal="pressed" from="UI/FlipButton" to="." method="_on_flip_button_pressed"]
[connection signal="pressed" from="UI/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="UI/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="coin_purchased" from="Table/Shop" to="." method="_on_shop_coin_purchased"]
